feat: picking and saving images

--- a/CoreDataContacts/Info.plist
+++ b/CoreDataContacts/Info.plist
@@ -2,10 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleIdentifier</key>
-	<string></string>
-	<key>Privacy - Photo Library Usage Description	</key>
-	<string>We need permission to get an image from gallery</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need your permission to select a photo</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
